# pywrap-sdl

./: CMakeCache.txt  CMakeLists.txt  Make.imgui  Makefile  cmake_install.cmake  main.cpp  main.py  test
cmake/: FindSDL2_image.cmake
